--- a/basic_python_tutorials/oop.ipynb
+++ b/basic_python_tutorials/oop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Object Oriented Programming and File Handling\n",
+    "# Object Oriented Programming\n",
     "\n",
     "\n",
     "## OOP\n",
@@ -36,25 +36,16 @@
     "        The repr or representation function returns a string that is used when printing\n",
     "        a class\n",
     "        \"\"\"\n",
-    "        return \"<Foo: bar=\" + str(self._bar) + \">\""
+    "        return \"<Foo: bar={} num={}>\".format(self._bar, self.magic_number)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Foo: bar=1>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = Foo(1)\n",
-    "print(a)"
+    "a = Foo(1)"
    ]
   },
   {
@@ -66,100 +57,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The answer is  42\n"
+      "<Foo: bar=1>\n"
      ]
     }
    ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a._bar = 2\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a.print()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## File Handling\n",
-    "\n",
-    "Files can be opened using the `open` function the first two arguments it takes is a filename and a mode strings.  For more information evaluate the box below."
+    "class Bar(Foo):                          # Inherits functions from Foo\n",
+    "    def print(self):                     # override the inherited function \n",
+    "        print(\"What is the question?\")\n",
+    "        super().print()                  # call the inherited function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Bar(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "open?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This opens a file and dumps 3 lines to it.  This provides us something to read"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fout = open(\"tmpfile\", \"wt\")\n",
-    "fout.write(\"First line\\n\")\n",
-    "fout.write(\"Second line\\n\")\n",
-    "fout.write(\"Third line\")\n",
-    "fout.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First line\n",
-      "Second line\n",
-      "Third line\n"
+      "The answer is  42\n"
      ]
     }
    ],
    "source": [
-    "with open(\"tmpfile\", \"rt\") as fin:  # We can use a with block to close the file when control leaves the block\n",
-    "    for line in fin:                # If we iterate over a file and get back lines for each loop\n",
-    "        print(line.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fir\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"tmpfile\", \"rt\") as fin:\n",
-    "    print(fin.read(3))  # print the first 3 characters of the file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This cell just cleans up the file so I am not leaving any detritus on your HDs\n",
-    "import os\n",
-    "os.unlink(\"tmpfile\")"
+    "b.print()"
    ]
   }
  ],
