--- a/basic_python_tutorials/FileIO.ipynb
+++ b/basic_python_tutorials/FileIO.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"tmpfile\", \"wt\") as fout:\n",
+    "with open(\"tmpfile\", \"wt\", newline='') as fout:\n",
     "    writer = csv.writer(fout)\n",
     "    writer.writerow([1,2,3,4,5])\n",
     "    writer.writerow(list(range(6,11)))"
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "with open(\"tmpfile\", \"rt\") as fin:\n",
+    "with open(\"tmpfile\", \"rt\", newline='') as fin:\n",
     "    reader = csv.reader(fin)\n",
     "    for row in reader:   # all elements in the returned row will be strings\n",
     "        print(row)       # you must handle the case of converting it to a float or int"
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "with open(\"tmpfile\", \"rt\") as fin:\n",
+    "with open(\"tmpfile\", \"rt\", newline='') as fin:\n",
     "    reader = csv.reader(fin)\n",
     "    for a, b, c, d, e in reader:  # this is called variable unpacking, each element in the \n",
     "        print(a)                  # returned list is assigned to a variable #vars == #elements  "
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
