--- a/data_science_tutorials/numpy.ipynb
+++ b/data_science_tutorials/numpy.ipynb
@@ -541,7 +541,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Doing math with numpy"
+    "## Doing math with numpy\n",
+    "\n",
+    "The most important concept of numpy maths is broadcasting.  This means that if you provide to different sizes of arrays i.e. a scalar + 4x4 array numpy broadcasts the operation to all 4x4 elements.  Similarly if we use a 1xn row vector and you add/subtract/multiply/etc with and mxn array it will do so m times over each row"
    ]
   },
   {
@@ -633,7 +635,7 @@
     }
    ],
    "source": [
-    "a + 5"
+    "a + 5  # 5 is added to each element"
    ]
   },
   {
@@ -656,7 +658,7 @@
     }
    ],
    "source": [
-    "a + bRow"
+    "a + bRow  # 0,1,2,3 is added to each row"
    ]
   },
   {
@@ -679,7 +681,7 @@
     }
    ],
    "source": [
-    "a + bCol"
+    "a + bCol  # 0,1,2,3 is added to each column"
    ]
   },
   {
