--- a/data_science_tutorials/pandas.ipynb
+++ b/data_science_tutorials/pandas.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas"
+    "# Pandas\n",
+    "\n",
+    "[Pandas website](https://pandas.pydata.org/)"
    ]
   },
   {
@@ -2112,7 +2114,7 @@
     }
    ],
    "source": [
-    "tmp = {name: iris.data[:, i] for i, name in enumerate(iris.feature_names)}  # dictionar comprehension\n",
+    "tmp = {name: iris.data[:, i] for i, name in enumerate(iris.feature_names)}  # dictionary comprehension\n",
     "tmp[\"target\"] = [iris.target_names[i] for i in iris.target]\n",
     "iris_df = pd.DataFrame(tmp)\n",
     "iris_df.head()"
